--- a/pinyg-protal/src/main/webapp/WEB-INF/views/login.html
+++ b/pinyg-protal/src/main/webapp/WEB-INF/views/login.html
@@ -111,7 +111,7 @@
         </div>
         <div class="copy">
             <p>各门店营业时间：周一至周日 09:00-21:30 &nbsp;&nbsp;&nbsp;&nbsp; 全国服务热线：000-000-00000 &nbsp;&nbsp;0000-00000000 &nbsp;&nbsp;&nbsp;&nbsp; 工作时间：周一至周日 09:00-21:30</p>
-            <p>网站ICP备案号：<a rel="nofollow" href="javascript:;" target="_blank">滇ICP备xxxxx号</a> &nbsp;&nbsp;&nbsp;&nbsp; 电信业务经营许可证：滇B2-xxxx号 &nbsp;&nbsp;&nbsp;&nbsp; </p>
+            <p>网站ICP备案号：<a rel="nofollow" href="javascript:;" target="_blank">京ICP备xxxxx号</a> &nbsp;&nbsp;&nbsp;&nbsp; 电信业务经营许可证：滇B2-xxxx号 &nbsp;&nbsp;&nbsp;&nbsp; </p>
             <p>Copyright © 2006 - 2017 品优购JD.com 版权所有</p>
         </div>
     </div>
